public/styles.css
* {
  cursor: default;
}

a:visited {
  color: black;
}

a {
  text-decoration: none;
}

input {
  outline: none;
}

.input-area {
  width: 80%;
  padding: 20px;
  font-size: 40px;
  cursor: text;
}

button {
  cursor: pointer;
  outline: none;
  background-color: white;
  border: 1px solid black;
  height: 50px;
  line-height: 20px;

}

img {
  max-height: 200px;
  background-color: black;
  border: 2px solid black;
  min-height: 200px;
  max-width: 130px;
  min-width: 130px;
  margin: 5px;
  cursor: pointer;
}

li {
  list-style: none;
}

.title-name {
  text-align: center;
  font-size: 40px;
  font-family: 'Oswald';
}

.book-description {
  font-family: 'Droid Serif';
}

.page-container {
  height: 100vh;
  width: 100%;
  background: snow;
  overflow: hidden;
}

.header-container {
  background: white;
  padding-left: 10px;
  border-bottom: 1px solid dimgrey;
}

.main-header {
  display: inline-block;
  font-family: 'Quicksand';
  font-size: 70px;
  /*color: dimgrey;*/
  color: #35582D;
  cursor: pointer;
}

.sub-header {
  font-family: 'Slabo 27px';
  font-size: 15px;
  display: none;
}

.main-header:hover {
  color: grey;
}

.fa-user {
  color: grey;
  float: right;
  margin-top: 20px;
  margin-right: 30px;
  cursor: pointer;
}

.fa-user:hover {
  color: dimgrey;
}

.content-area-container-search {
  background: snow;
  position: relative;
  height: 87%;
  width: 100%;
  display: flex;
  overflow: hidden;
}

.content-area-container {
  position: relative;
  height: 77%;
  width: 80%;
  border: 1px solid grey;
  margin-left: auto;
  margin-right: auto;
  top: 5%;
  background: white;
}

.welcome-message {
  text-align: center;
}

.content-area-header {
  text-align: center;
  font-family: 'Alegreya';
  font-size: 75px;
  padding: 20px 0px 20px 0px;
  color: dimgrey;
}

.search-results {
  height: 97%;
  margin: 0 auto;
  width: 700px;
  margin: 10px auto 0px auto;
  border: 1px solid black;
  overflow: auto;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.footer {
  position: absolute;
  text-align: center;
  bottom: 0px;
  width: 100vw;
}

form {
  position: relative;
  text-align: center;
  font-family: sans-serif;
}

.modal {
  display: none;
  width: 90vw;
  height: 60vh;
  border: 3px solid black;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 30%;
  margin-left:-350px;
  margin-top: -270px;
  background: snow;
  padding: 10px;
  z-index: 5;
}

.modal-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.modal-area {

}

.modal-image {
  width: 30%;
  min-width: 300px;
  min-height: 450px;
  border: 2px solid black;
  cursor: default;
}

.book-info-area {
  width: 70%;
  overflow-x: auto;
}

.cover-page {
  z-index: 4;
  position: fixed;
  display: none;
  width: 100vw;
  height: 100vh;
  background: rgba(0, 0, 0, 0.8);
}

.page-container-cover {
  z-index: 10;
  position: fixed;
  display: none;
  width: 100vw;
  height: 100vh;
  background: rgba(0, 0, 0, 0.8);
}

.fa-times {
  position: absolute;
  left: 98%;
  color: black;
  cursor: pointer;
}

.fa-times:hover {
  color: lightgrey;
}

.tsundoku-it-broken {
  background-color: #f9f9f9;
  height: 30px;
}

.tsundoku-it-broken:hover {
  box-shadow: 1px 2px 1px black;
  background-color: #f1f1f1
}

.tsundoku-it {
  background-color: #f9f9f9;
}

.tsundoku-it:hover {
  background-color: #f1f1f1;
  box-shadow: 1px 2px 1px black;
}

.dropdown-menu {
  position: relative;
  display: inline-block;
  float: right;
}

.dropdown-content {
  top: 100%;
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  right: 0;
  z-index: 1000000;
  text-align: center;
}

.view-profile {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  cursor: pointer;
}

.view-profile:hover {
  background-color: #f1f1f1
}

.dropdown-content .accounts-button {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  cursor: pointer;
}

.dropdown-content .accounts-button:hover {
  background-color: #f1f1f1
}

.log-out-button:hover {
  background-color: #f1f1f1;
}

.dropdown-menu:hover .dropdown-content {
  display: block;
}

.account-modal {
  display: none;
  z-index: 100;
  position: fixed;
  height: 70vh;
  width: 70%;
  background: white;
  /*border: 1px solid black;*/
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.account-modal-wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-around;
  height: 70vh;
  align-items: center;
}

.account {
  height: 90%;
  width: 45%;
  border: 1px solid black;
}

.account-header {
  text-align: center;
  font-size: 50px;
  padding-top: 10px;
  padding-bottom: 20px;
}

.login-area {
  padding: 10px;
  margin: 5px;
}

.search-book-button {
  cursor: pointer;
  margin-top: 10px;
  padding: 10px;
  background: white;
  color: darkgrey;
  border: 1px solid darkgrey;
}

.search-book-button:hover {
  border: 1px solid lightgrey;
  color: lightgrey;
}

.tsundokud-modal {
  display: none;
  position: absolute;
  height: 40vh;
  line-height: 40vh;
  font-size: 190px;
  text-align: center;
  width: 100%;
  background: linen;
  border: 5px solid black;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 999999999999999;
  font-family: 'Bree Serif', serif;
}

.book-name {
  font-size: 30px;
}

.log-out-button {
  width: 100%;
  cursor: pointer;
  outline: none;
  background: #f9f9f9;
  border: none;
  height: 100%;
  padding: 12px;
}

.name {
  font-size: 50px;
}

.profile-area-container {
  border: 2px solid black;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-around;
  align-items: center;
}

.profile-area {
  margin-top: -100px;
  width: 45%;
  background: white;
  border: 2px solid black;
  height: 75%;
}

.profile-left-header {
  text-align: center;
  font-size: 40px;
}

.bookcase-wrapper {
  display: flex;
  overflow-y: auto;
}

.bookcase {
  overflow-y: auto;
}

.profile-right-header {
  text-align: center;
  font-size: 40px;
}

@media (max-width: 1160px) {
  .sub-header {
    font-size: 10px;
  }
}

